--- a/index.html
+++ b/index.html
@@ -18,13 +18,16 @@
   </head>
 
   <body>
-    <!-- ======= Hero Section ======= -->
+    <!-- Hero Section  -->
     <section class="hero">
       <div class="container">
         <header class="nav-links">
           <div class="logo">
             <img src="Images/svg/logo.svg" alt="Logo" />
             <h1>Start</h1>
+          </div>
+          <div class="menu-icon">
+            <i class="fa-solid fa-bars"></i>
           </div>
           <ul class="order-list">
             <li><a href="#">Home</a></li>
@@ -48,15 +51,15 @@
             </p>
             <button>Explore</button>
           </div>
-          <div>
+          <div class="hero-image">
             <img src="Images/Hero.png" alt="Hero Image" />
           </div>
         </div>
       </div>
     </section>
 
-    <!-- ======= Gallery/Partners Section ======= -->
-    <section class="gallery container">
+    <!-- Gallery/Partners Section  -->
+    <!-- <section class="gallery container">
       <div class="gallery-item">
         <h3>PARTNERS</h3>
         <h1>Lorem Ipsum Dolor</h1>
@@ -70,10 +73,10 @@
         <img src="Images/svg/spotify.svg" alt="Spotify" />
       </div>
       <button>Learn More</button>
-    </section>
+    </section> -->
 
-    <!-- ======= Email/Mail Section ======= -->
-    <section class="mail container">
+    <!-- Email/Mail Section -->
+    <!-- <section class="mail container">
       <div>
         <img src="Images/img 1.png" alt="Mail Illustration" />
       </div>
@@ -88,15 +91,15 @@
         </p>
         <button>Learn More</button>
       </div>
-    </section>
+    </section> -->
 
-    <!-- ======= Services Section ======= -->
-    <section class="services container">
+    <!-- Services Section -->
+    <!-- <section class="services container">
       <div class="services-text">
-        <h2>Lorem ipsum dolor sit amet consectetur</h2>
+        <h2>Lorem ipsum dolor sit <br />amet consectetur</h2>
         <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit
-          nemo hic quos, ab, dolor aperiam nobis cum est eos error ipsum,
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. <br /> Suscipit
+          nemo hic quos, ab, dolor aperiam nobis cum est eos <br /> error ipsum,
           voluptate culpa nesciunt delectus iste?
         </p>
         <button>Learn More</button>
@@ -104,10 +107,10 @@
       <div>
         <img src="Images/img 2.png" alt="Services Illustration" />
       </div>
-    </section>
+    </section> -->
 
-    <!-- ======= Team Section ======= -->
-    <section class="talent container">
+    <!-- Team Section -->
+    <!-- <section class="talent container">
       <h4>TEAM</h4>
       <h1>Our Talents</h1>
       <p>
@@ -115,7 +118,7 @@
         Suscipit nemo hic quos, ab,
       </p>
 
-      <!-- Team Members -->
+      Team Members
       <div class="team-members">
         <div class="member_1">
           <img src="Images/team-1.png" alt="Peg Legge" />
@@ -140,10 +143,10 @@
       </div>
 
       <button>View Teams</button>
-    </section>
+    </section>  -->
 
-    <!-- ======= Footer ======= -->
-    <footer class="foot">
+    <!-- Footer -->
+    <!-- <footer class="foot">
       <div class="container footer-content">
         <div class="icons">
           <img src="Images/svg/Group 1.svg" alt="Icon 1" />
@@ -158,6 +161,6 @@
           <p>© Start, 2022. All rights reserved.</p>
         </div>
       </div>
-    </footer>
+    </footer> -->
   </body>
 </html>
