fix some responsive issues.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </section>
 
     <!-- Gallery/Partners Section  -->
-    <!-- <section class="gallery container">
+    <section class="gallery container">
       <div class="gallery-item">
         <h3>PARTNERS</h3>
         <h1>Lorem Ipsum Dolor</h1>
@@ -73,10 +73,10 @@
         <img src="Images/svg/spotify.svg" alt="Spotify" />
       </div>
       <button>Learn More</button>
-    </section> -->
+    </section>
 
     <!-- Email/Mail Section -->
-    <!-- <section class="mail container">
+    <section class="mail container">
       <div>
         <img src="Images/img 1.png" alt="Mail Illustration" />
       </div>
@@ -91,26 +91,26 @@
         </p>
         <button>Learn More</button>
       </div>
-    </section> -->
+    </section>
 
     <!-- Services Section -->
-    <!-- <section class="services container">
+    <section class="services container">
       <div class="services-text">
         <h2>Lorem ipsum dolor sit <br />amet consectetur</h2>
         <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. <br /> Suscipit
-          nemo hic quos, ab, dolor aperiam nobis cum est eos <br /> error ipsum,
-          voluptate culpa nesciunt delectus iste?
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. <br />
+          Suscipit nemo hic quos, ab, dolor aperiam nobis cum est eos <br />
+          error ipsum, voluptate culpa nesciunt delectus iste?
         </p>
         <button>Learn More</button>
       </div>
       <div>
         <img src="Images/img 2.png" alt="Services Illustration" />
       </div>
-    </section> -->
+    </section>
 
     <!-- Team Section -->
-    <!-- <section class="talent container">
+    <section class="talent container">
       <h4>TEAM</h4>
       <h1>Our Talents</h1>
       <p>
@@ -143,10 +143,10 @@
       </div>
 
       <button>View Teams</button>
-    </section>  -->
+    </section>
 
     <!-- Footer -->
-    <!-- <footer class="foot">
+    <footer class="foot">
       <div class="container footer-content">
         <div class="icons">
           <img src="Images/svg/Group 1.svg" alt="Icon 1" />
@@ -161,6 +161,6 @@
           <p>© Start, 2022. All rights reserved.</p>
         </div>
       </div>
-    </footer> -->
+    </footer>
   </body>
 </html>
