website is completed with responsive design

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
           </div>
           <ul class="order-list">
             <li><a href="#">Home</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="./portfolio/portfolio.html">Portfolio</a></li>
+            <li><a href="./services/service.html">Services</a></li>
+            <li><a href="./contact/contact.html">Contact</a></li>
           </ul>
         </header>
         <div class="hero-content">
@@ -118,7 +118,7 @@
         Suscipit nemo hic quos, ab,
       </p>
 
-      Team Members
+      <!-- Team Members -->
       <div class="team-members">
         <div class="member_1">
           <img src="Images/team-1.png" alt="Peg Legge" />
